--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <!-- Header -->
   <header>
+    <img src="images/Profile Pic.jpg" alt="Hruturaj Vartak profile picture" class="profile-pic" style="width:120px;border-radius:50%;margin-bottom:1em;">
     <h1>Hruturaj Vartak</h1>
     <h2>Lead Mechanical Engineer and Team Leader</h2>
     <p>Master of Mechanical Engineering and Business Administration</p>
@@ -35,9 +36,9 @@
     <!-- Project 1 -->
     <div class="card">
       <h3>Mini Excavator Frame – Zero Tail-Swing Design</h3>
-      <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?fit=crop&w=700&q=80" alt="Excavator CAD Concept" />
+      <img src="images/Mini Excavator Frame – Zero Tail-Swing Design.png" alt="Mini Excavator Frame – Zero Tail-Swing Design" />
       <ul>
-        <li><b>Goal:</b> Create robust, lightweight, highly maneuverable 3.5mT mini-excavator frame meeting safety & operational standards.</li>
+        <li><b>Project Goal:</b> Create robust, lightweight, highly maneuverable 3.5mT mini-excavator frame meeting safety & operational standards.</li>
         <li><b>Key Contributions:</b> Market research, competitor benchmarking, CAD modeling in Creo, material optimization, seamless hydraulics integration.</li>
         <li><b>Analysis & Validation:</b> FEA on critical load cases (static, lateral, impact), iterative weight optimization.</li>
         <li><b>Impact:</b> Improved maneuverability in confined spaces (zero tail-swing), competitive & user-friendly design.</li>
@@ -47,7 +48,8 @@
     <!-- Project 2 -->
     <div class="card">
       <h3>Reduced Tail-Swing Excavator Frame – Design Process</h3>
-      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?fit=crop&w=700&q=80" alt="Excavator Structural Design" />
+      <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_1.jpg" alt="Reduced Tail-Swing Excavator Frame Process 1" />
+      <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_2.png" alt="Reduced Tail-Swing Excavator Frame Process 2" />
       <ul>
         <li><b>Project Goal:</b> Design 15.5mT reduced tail-swing excavator frame for confined spaces; maintain strength, stability, manufacturability.</li>
         <li><b>Process:</b> Market analysis, customer feedback, efficient 3D models in Creo, high-strength steel selection, full system integration.</li>
@@ -58,7 +60,7 @@
     <!-- Project 3 -->
     <div class="card">
       <h3>Excavator Arm Design & Structural Optimization</h3>
-      <img src="https://images.unsplash.com/photo-1527443224154-9c9c6e8d0b72?fit=crop&w=700&q=80" alt="Excavator Arm FEA" />
+      <img src="images/Excavator Arm Design & Structural Optimization.jpg" alt="Excavator Arm Design & Structural Optimization" />
       <ul>
         <li><b>Objective:</b> Design excavator arm with optimal pin geometry, strength, and reach.</li>
         <li><b>Approach:</b> Boom/bucket/pin geometry, cross-section modeling, Q345 steel, FEA-driven geometry refinements.</li>
@@ -69,7 +71,8 @@
     <!-- Project 4 -->
     <div class="card">
       <h3>Ergonomic And Visibility Study Of Excavator Cabin</h3>
-      <img src="https://images.unsplash.com/photo-1514474959185-dab924e265b1?fit=crop&w=700&q=80" alt="Ergonomic simulation concept" />
+      <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_1.jpg" alt="Ergonomic Study 1" />
+      <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_2.png" alt="Ergonomic Study 2" />
       <ul>
         <li><b>Objective:</b> Improve operator comfort, visibility, safety per ISO 5006.</li>
         <li><b>Approach:</b> Ergonomic assessment (Creo Manikin), blind spot/masking analysis, feedback from operators.</li>
@@ -91,7 +94,7 @@
     <!-- Project 6 -->
     <div class="card">
       <h3>IoT-enabled Digital Twin For Structural Systems</h3>
-      <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?fit=crop&w=700&q=80" alt="Digital twin schematic" />
+      <img src="images/IoT-enabled Digital Twin For Structural Systems.png" alt="IoT-enabled Digital Twin" />
       <ul>
         <li><b>Objective:</b> Ensure durability/reliability under dynamic loads.</li>
         <li><b>Approach:</b> Sensor networks, IoT gateways, cloud data, digital twin modeling, real-time monitoring.</li>
@@ -99,38 +102,26 @@
       </ul>
     </div>
 
-    <!-- Project 7 -->
-    <div class="card">
-      <h3>Additive Manufacturing Of Hydraulic Manifolds</h3>
-      <img src="https://images.unsplash.com/photo-1453928582365-b6ad33cbcf64?fit=crop&w=700&q=80" alt="Additive Manufacturing" />
-      <ul>
-        <li><b>Objective:</b> Reduce lead time & cost for hydraulic manifold prototyping/production.</li>
-        <li><b>Approach:</b> SolidWorks design, ANSYS topology optimization, DMLS process, pressure/fatigue testing.</li>
-        <li><b>Results:</b> Lead time reduced: 6 weeks → 2 weeks; 18% less material use; $500K annual savings.</li>
-      </ul>
-    </div>
-  </section>
-
   <!-- Patents -->
   <section>
     <h2>Patents</h2>
     <div class="card">
       <h3><a href="https://ppubs.uspto.gov/dirsearch-public/print/downloadPdf/20220056666" target="_blank">Combination Tie Down Lug And Step Riser</a></h3>
       <p>
-        A combination tie down lug and step riser includes a foot support portion, a hold down loop and a mounting portion—all fabricated from a single piece. The hold down loop includes a U-shaped opening, with mounts welded or attached to an excavator base.
+        A combination tie down lug and step riser includes a foot support portion, a hold down loop, and a mounting portion—all fabricated from a single piece. The hold down loop includes a U-shaped opening, with mounts welded or attached to an excavator base.
       </p>
     </div>
     <div class="card">
       <h3><a href="https://ppubs.uspto.gov/dirsearch-public/print/downloadPdf/11886218" target="_blank">One-handed Joystick for Cranes</a></h3>
       <p>
-        An all-in-one crane operator joystick with rotatable bars, rings, rocker switches, and push buttons; enabling single-hand precision movements for all major crane operations, including hoist and telescoping boom, with safety features.
+        An all-in-one crane operator joystick with rotatable bars, rings, rocker switches, and push buttons, enabling single-hand precision movements for all major crane operations, including hoist and telescoping boom, with safety features.
       </p>
     </div>
   </section>
 
   <!-- Skills -->
   <section>
-    <h2>Skills & Alignment for Beltways' Mission</h2>
+    <h2>Skills</h2>
     <ul>
       <li>15+ years structural design & FEA expertise</li>
       <li>Full design lifecycle: concept, CAD, prototyping, testing, documentation, launch</li>
@@ -147,7 +138,7 @@
     <h2>What Leaders Say About My Work</h2>
     <div class="card">
       <blockquote>
-        "Raj quickly supported our team in developing new Earth Moving products. His communication skills and ability to see the bigger picture made him a strong leader."<br>
+        "Raj quickly supported our team in developing new Earth-moving products. His communication skills and ability to see the bigger picture made him a strong leader."<br>
         <strong>– Erik Goslawski (Director, Siemens Digital Industries Software)</strong>
       </blockquote>
     </div>
@@ -170,8 +161,7 @@
     <h2>Contact</h2>
     <p>
       Email: <a href="mailto:hruturaj.vartak@gmail.com">hruturaj.vartak@gmail.com</a> |
-      Phone: <a href="tel:+16207198190">620-719-8190</a><br>
-      LinkedIn: <a href="#">Hruturaj V</a>
+      LinkedIn: <a href="www.linkedin.com/in/hruturajvartak">Hruturaj Vartak</a>
     </p>
     <p>&copy; 2025 Hruturaj Vartak - Portfolio</p>
   </footer>
