--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <img src="images/Profile Pic.jpg" alt="Hruturaj Vartak profile picture" class="profile-pic" style="width:120px;border-radius:50%;margin-bottom:1em;">
-    <h1>Hruturaj Vartak</h1>
-    <h2>Lead Mechanical Engineer and Team Leader</h2>
-    <p>Master of Mechanical Engineering and Business Administration</p>
-    <div class="contact">
+  <!-- Profile Card -->
+  <div class="profile-card">
+    <img src="images/Profile Pic.jpg" alt="Hruturaj Vartak profile" class="profile-pic" />
+    <h1 class="name">Hruturaj Vartak</h1>
+    <h2 class="title">Lead Mechanical Engineer and Team Leader</h2>
+    <div class="subtitle">Master of Mechanical Engineering and Business Administration</div>
+    <div class="contact-links">
       <a href="mailto:hruturaj.vartak@gmail.com">hruturaj.vartak@gmail.com</a> |
-      <a href="tel:+16207198190">620-719-8190</a> |
-      <a href="#">LinkedIn: Hruturaj V</a>
+      <a href="tel:6207198190">620-719-8190</a> |
+      <a href="https://www.linkedin.com/in/hruturajvartak/">LinkedIn: Hruturaj V</a>
     </div>
-  </header>
-
+  </div>
+  
   <!-- About -->
-  <section>
+  <section class="about">
     <h2>About Me</h2>
     <p>
       A resume alone cannot capture the full breadth of my skills and experiences. This portfolio showcases selected mechanical design projects that reflect my technical expertise, problem-solving approach, and passion for innovation. To respect confidentiality agreements with previous employers, some projects are presented conceptually. Together, these examples illustrate my design methodology, technical skills, and ability to deliver measurable results.<br><br>
@@ -33,34 +33,36 @@
   <section>
     <h2>Projects</h2>
 
-    <!-- Project 1 -->
-    <div class="card">
+    <!-- Mini Excavator Frame – Zero Tail-Swing Design -->
+    <div class="project-card">
+      <img src="images/Mini Excavator Frame – Zero Tail-Swing Design.png" alt="Mini Excavator Frame – Zero Tail-Swing Design" class="project-image" />
       <h3>Mini Excavator Frame – Zero Tail-Swing Design</h3>
-      <img src="images/Mini Excavator Frame – Zero Tail-Swing Design.png" alt="Mini Excavator Frame – Zero Tail-Swing Design" />
       <ul>
-        <li><b>Project Goal:</b> Create robust, lightweight, highly maneuverable 3.5mT mini-excavator frame meeting safety & operational standards.</li>
+        <li><b>Goal:</b> Create robust, lightweight, highly maneuverable 3.5mT mini-excavator frame meeting safety & operational standards.</li>
         <li><b>Key Contributions:</b> Market research, competitor benchmarking, CAD modeling in Creo, material optimization, seamless hydraulics integration.</li>
         <li><b>Analysis & Validation:</b> FEA on critical load cases (static, lateral, impact), iterative weight optimization.</li>
         <li><b>Impact:</b> Improved maneuverability in confined spaces (zero tail-swing), competitive & user-friendly design.</li>
       </ul>
     </div>
 
-    <!-- Project 2 -->
-    <div class="card">
+    <!-- Reduced Tail-Swing Excavator Frame – Design Process -->
+    <div class="project-card">
+      <div class="project-images-row">
+        <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_1.jpg" alt="Reduced Tail-Swing Frame Design 1" class="project-image" />
+        <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_2.png" alt="Reduced Tail-Swing Frame Design 2" class="project-image" />
+      </div>
       <h3>Reduced Tail-Swing Excavator Frame – Design Process</h3>
-      <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_1.jpg" alt="Reduced Tail-Swing Excavator Frame Process 1" />
-      <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_2.png" alt="Reduced Tail-Swing Excavator Frame Process 2" />
       <ul>
-        <li><b>Project Goal:</b> Design 15.5mT reduced tail-swing excavator frame for confined spaces; maintain strength, stability, manufacturability.</li>
+        <li><b>Goal:</b> Design 15.5mT reduced tail-swing excavator frame for confined spaces; maintain strength, stability, manufacturability.</li>
         <li><b>Process:</b> Market analysis, customer feedback, efficient 3D models in Creo, high-strength steel selection, full system integration.</li>
         <li><b>FEA & Results:</b> Static / modal analysis, iterative optimization, lighter & more maneuverable frame, improved operator comfort.</li>
       </ul>
     </div>
 
-    <!-- Project 3 -->
-    <div class="card">
+    <!-- Excavator Arm Design & Structural Optimization -->
+    <div class="project-card">
+      <img src="images/Excavator Arm Design & Structural Optimization.jpg" alt="Excavator Arm Design & Structural Optimization" class="project-image" />
       <h3>Excavator Arm Design & Structural Optimization</h3>
-      <img src="images/Excavator Arm Design & Structural Optimization.jpg" alt="Excavator Arm Design & Structural Optimization" />
       <ul>
         <li><b>Objective:</b> Design excavator arm with optimal pin geometry, strength, and reach.</li>
         <li><b>Approach:</b> Boom/bucket/pin geometry, cross-section modeling, Q345 steel, FEA-driven geometry refinements.</li>
@@ -68,11 +70,13 @@
       </ul>
     </div>
 
-    <!-- Project 4 -->
-    <div class="card">
+    <!-- Ergonomic And Visibility Study Of Excavator Cabin -->
+    <div class="project-card">
+      <div class="project-images-row">
+        <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_1.jpg" alt="Ergonomic Cabin Study 1" class="project-image" />
+        <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_2.png" alt="Ergonomic Cabin Study 2" class="project-image" />
+      </div>
       <h3>Ergonomic And Visibility Study Of Excavator Cabin</h3>
-      <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_1.jpg" alt="Ergonomic Study 1" />
-      <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_2.png" alt="Ergonomic Study 2" />
       <ul>
         <li><b>Objective:</b> Improve operator comfort, visibility, safety per ISO 5006.</li>
         <li><b>Approach:</b> Ergonomic assessment (Creo Manikin), blind spot/masking analysis, feedback from operators.</li>
@@ -80,8 +84,9 @@
       </ul>
     </div>
 
-    <!-- Project 5 -->
-    <div class="card">
+    <!-- Topology Optimization Of Excavator Frame -->
+    <div class="project-card">
+      <!-- Add project image here if available, otherwise leave empty -->
       <h3>Topology Optimization Of Excavator Frame</h3>
       <ul>
         <li><b>Objective:</b> Reduce frame weight, maintain durability/safety.</li>
@@ -90,37 +95,38 @@
       </ul>
     </div>
 
-    <!-- Project 6 -->
-    <div class="card">
+    <!-- IoT-enabled Digital Twin For Structural Systems -->
+    <div class="project-card">
+      <img src="images/IoT-enabled Digital Twin For Structural Systems.png" alt="IoT-enabled Digital Twin For Structural Systems" class="project-image" />
       <h3>IoT-enabled Digital Twin For Structural Systems</h3>
-      <img src="images/IoT-enabled Digital Twin For Structural Systems.png" alt="IoT-enabled Digital Twin" />
       <ul>
         <li><b>Objective:</b> Ensure durability/reliability under dynamic loads.</li>
         <li><b>Approach:</b> Sensor networks, IoT gateways, cloud data, digital twin modeling, real-time monitoring.</li>
         <li><b>Results:</b> 92% fatigue prediction, 30% downtime reduction, 20% maintenance savings.</li>
       </ul>
     </div>
+  </section>
 
   <!-- Patents -->
   <section>
     <h2>Patents</h2>
-    <div class="card">
-      <h3><a href="https://ppubs.uspto.gov/dirsearch-public/print/downloadPdf/20220056666" target="_blank">Combination Tie Down Lug And Step Riser</a></h3>
+    <div class="project-card">
+      <h3><a href="#">Combination Tie Down Lug And Step Riser</a></h3>
       <p>
         A combination tie down lug and step riser includes a foot support portion, a hold down loop, and a mounting portion—all fabricated from a single piece. The hold down loop includes a U-shaped opening, with mounts welded or attached to an excavator base.
       </p>
     </div>
-    <div class="card">
-      <h3><a href="https://ppubs.uspto.gov/dirsearch-public/print/downloadPdf/11886218" target="_blank">One-handed Joystick for Cranes</a></h3>
+    <div class="project-card">
+      <h3><a href="#">One-handed Joystick for Cranes</a></h3>
       <p>
-        An all-in-one crane operator joystick with rotatable bars, rings, rocker switches, and push buttons, enabling single-hand precision movements for all major crane operations, including hoist and telescoping boom, with safety features.
+        An all-in-one crane operator joystick with rotatable bars, rings, rocker switches, and push buttons; enabling single-hand precision movements for all major crane operations, including hoist and telescoping boom, with safety features.
       </p>
     </div>
   </section>
 
   <!-- Skills -->
   <section>
-    <h2>Skills</h2>
+    <h2>Skills & Alignment for Beltways' Mission</h2>
     <ul>
       <li>15+ years structural design & FEA expertise</li>
       <li>Full design lifecycle: concept, CAD, prototyping, testing, documentation, launch</li>
@@ -135,32 +141,32 @@
   <!-- Testimonials -->
   <section>
     <h2>What Leaders Say About My Work</h2>
-    <div class="card">
+    <div class="testimonial">
       <blockquote>
-        "Raj quickly supported our team in developing new Earth-moving products. His communication skills and ability to see the bigger picture made him a strong leader."<br>
-        <strong>– Erik Goslawski (Director, Siemens Digital Industries Software)</strong>
+        "Raj quickly supported our team in developing new Earth-moving products. His communication skills and ability to see the bigger picture made him a strong leader."
+        <br><strong>– Erik Goslawski (Director, Siemens Digital Industries Software)</strong>
       </blockquote>
     </div>
-    <div class="card">
+    <div class="testimonial">
       <blockquote>
-        "Raj demonstrated impressive abilities and transitioned seamlessly from individual contributor to Engineering Manager. He motivated his team, removed roadblocks, and fostered continuous learning — a rare quality in engineering leadership."<br>
-        <strong>– Guy A. Moore, PE (Director of Engineering)</strong>
+        "Raj demonstrated impressive abilities and transitioned seamlessly from individual contributor to Engineering Manager. He motivated his team, removed roadblocks, and fostered continuous learning — a rare quality in engineering leadership."
+        <br><strong>– Guy A. Moore, PE (Director of Engineering)</strong>
       </blockquote>
     </div>
-    <div class="card">
+    <div class="testimonial">
       <blockquote>
-        "Raj led a 15-member structural team, driving urgent projects to successful launch. His leadership enabled innovation, including two patents. I confidently believe he will be a successful leader and innovator in the industry."<br>
-        <strong>– Jack Wang (Technology Researcher & Former President Zoomlion NA)</strong>
+        "Raj led a 15-member structural team, driving urgent projects to successful launch. His leadership enabled innovation, including two patents. I confidently believe he will be a successful leader and innovator in the industry."
+        <br><strong>– Jack Wang (Technology Researcher & Former President Zoomlion NA)</strong>
       </blockquote>
     </div>
   </section>
 
-  <!-- Contact -->
+  <!-- Contact Footer -->
   <footer>
     <h2>Contact</h2>
     <p>
       Email: <a href="mailto:hruturaj.vartak@gmail.com">hruturaj.vartak@gmail.com</a> |
-      LinkedIn: <a href="www.linkedin.com/in/hruturajvartak">Hruturaj Vartak</a>
+      LinkedIn: <a href="https://www.linkedin.com/in/hruturajvartak/">Hruturaj Vartak</a>
     </p>
     <p>&copy; 2025 Hruturaj Vartak - Portfolio</p>
   </footer>
