--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
     <div class="project-card">
       <h3><a href="#">Combination Tie Down Lug And Step Riser</a></h3>
       <p>
-        A combination tie down lug and step riser includes a foot support portion, a hold down loop, and a mounting portion—all fabricated from a single piece. The hold down loop includes a U-shaped opening, with mounts welded or attached to an excavator base.
+        A combination tie-down lug and step riser includes a foot support portion, a hold-down loop, and a mounting portion—all fabricated from a single piece. The hold down loop includes a U-shaped opening, with mounts welded or attached to an excavator base.
       </p>
     </div>
     <div class="project-card">
       <h3><a href="#">One-handed Joystick for Cranes</a></h3>
       <p>
-        An all-in-one crane operator joystick with rotatable bars, rings, rocker switches, and push buttons; enabling single-hand precision movements for all major crane operations, including hoist and telescoping boom, with safety features.
+        An all-in-one crane operator joystick with rotatable bars, rings, rocker switches, and push buttons, enabling single-hand precision movements for all major crane operations, including hoist and telescoping boom, with safety features.
       </p>
     </div>
   </section>
