--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <!-- Profile Card -->
-  <div class="profile-card">
-    <img src="images/Profile Pic.jpg" alt="Hruturaj Vartak profile" class="profile-pic" />
+  <div class="profile-header">
+  <img src="images/Profile Pic.jpg" alt="Profile Picture" class="profile-pic"/>
+  <div class="profile-details">
     <h1 class="name">Hruturaj Vartak</h1>
     <h2 class="title">Lead Mechanical Engineer and Team Leader</h2>
     <div class="subtitle">Master of Mechanical Engineering and Business Administration</div>
@@ -19,6 +20,8 @@
       <a href="https://www.linkedin.com/in/hruturajvartak/">LinkedIn: Hruturaj V</a>
     </div>
   </div>
+</div>
+
   
   <!-- About -->
   <section class="about">
