--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <p class="subtitle">Master of Mechanical Engineering and Business Administration</p>
                 <div class="contact-info">
                     <a href="mailto:hruturaj.vartak@gmail.com">hruturaj.vartak@gmail.com</a> | 
-                    <a href="tel:620-719-8190">620-719-8190</a> | 
                     <a href="https://www.linkedin.com/in/hruturajvartak/" target="_blank">LinkedIn: Hruturaj V</a>
                 </div>
             </div>
@@ -40,9 +39,9 @@
 
             <!-- Project 1: Mini Excavator Frame -->
             <div class="project-card">
+                <h3>Mini Excavator Frame – Zero Tail-Swing Design</h3>
                 <img src="images/Mini-Excavator-Frame-Zero-Tail-Swing-Design.jpg" alt="Mini Excavator Frame Zero Tail-Swing Design FEA Analysis" class="project-image">
                 <div class="project-content">
-                    <h3>Mini Excavator Frame – Zero Tail-Swing Design</h3>
                     <div class="project-details">
                         <div class="detail-section">
                             <h4>Project Goal</h4>
@@ -67,13 +66,6 @@
                             </ul>
                         </div>
                         <div class="detail-section">
-                            <h4>Impact</h4>
-                            <ul>
-                                <li>Improved maneuverability in confined spaces (zero tail-swing)</li>
-                                <li>Delivered a competitive, user-friendly design</li>
-                            </ul>
-                        </div>
-                        <div class="detail-section">
                             <h4>Results & Impact</h4>
                             <ul>
                                 <li>15% lighter frame → improved fuel efficiency & handling</li>
@@ -91,12 +83,12 @@
 
             <!-- Project 2: Reduced Tail-Swing Excavator Frame -->
             <div class="project-card">
-                <div class="project-images">
-                    <img src="images/Reduced-Tail-Swing-Excavator-Frame-Design-Process_1.jpg" alt="Reduced Tail-Swing Excavator Frame CAD Model" class="project-image">
-                    <img src="images/Reduced-Tail-Swing-Excavator-Frame-Design-Process_2.jpg" alt="Reduced Tail-Swing Excavator Frame FEA Results" class="project-image">
+                <h3>Reduced Tail-Swing Excavator Frame – Design Process</h3>
+                <div class="project-images-dual">
+                    <img src="images/Reduced-Tail-Swing-Excavator-Frame-Design-Process_1.jpg" alt="Reduced Tail-Swing Excavator Frame CAD Model" class="project-image-dual">
+                    <img src="images/Reduced-Tail-Swing-Excavator-Frame-Design-Process_2.jpg" alt="Reduced Tail-Swing Excavator Frame FEA Results" class="project-image-dual">
                 </div>
                 <div class="project-content">
-                    <h3>Reduced Tail-Swing Excavator Frame – Design Process</h3>
                     <div class="project-details">
                         <div class="detail-section">
                             <h4>Project Goal</h4>
@@ -140,9 +132,9 @@
 
             <!-- Project 3: Excavator Arm Design -->
             <div class="project-card">
+                <h3>Excavator Arm Design & Structural Optimization</h3>
                 <img src="images/Excavator-Arm-Design-Structural-Optimization.jpg" alt="Excavator Arm Design & Structural Optimization" class="project-image">
                 <div class="project-content">
-                    <h3>Excavator Arm Design & Structural Optimization</h3>
                     <div class="project-details">
                         <div class="detail-section">
                             <h4>Objective</h4>
@@ -174,12 +166,12 @@
 
             <!-- Project 4: Ergonomic Study -->
             <div class="project-card">
-                <div class="project-images">
-                    <img src="images/Ergonomic-And-Visibility-Study-Of-Excavator-Cabin_1.jpg" alt="Excavator Cabin FEA Stress Analysis" class="project-image">
-                    <img src="images/Ergonomic-And-Visibility-Study-Of-Excavator-Cabin_2.jpg" alt="Excavator Cabin Visibility Analysis" class="project-image">
+                <h3>Ergonomic And Visibility Study Of Excavator Cabin</h3>
+                <div class="project-images-dual">
+                    <img src="images/Ergonomic-And-Visibility-Study-Of-Excavator-Cabin_1.jpg" alt="Excavator Cabin FEA Stress Analysis" class="project-image-dual">
+                    <img src="images/Ergonomic-And-Visibility-Study-Of-Excavator-Cabin_2.jpg" alt="Excavator Cabin Visibility Analysis" class="project-image-dual">
                 </div>
                 <div class="project-content">
-                    <h3>Ergonomic And Visibility Study Of Excavator Cabin</h3>
                     <div class="project-details">
                         <div class="detail-section">
                             <h4>Objective</h4>
@@ -211,8 +203,8 @@
 
             <!-- Project 5: Topology Optimization -->
             <div class="project-card">
+                <h3>Topology Optimization Of Excavator Frame</h3>
                 <div class="project-content">
-                    <h3>Topology Optimization Of Excavator Frame</h3>
                     <div class="project-details">
                         <div class="detail-section">
                             <h4>Objective</h4>
@@ -229,7 +221,7 @@
                         <div class="detail-section">
                             <h4>Results</h4>
                             <ul>
-                                <li>15% lighter frame → $1.2M annual savings</li>
+                                <li>15% lighter frame → annual cost savings</li>
                                 <li>Improved fuel efficiency & payload capacity</li>
                                 <li>Maintained structural reliability under field conditions</li>
                             </ul>
@@ -243,9 +235,9 @@
 
             <!-- Project 6: IoT Digital Twin -->
             <div class="project-card">
+                <h3>IoT-enabled Digital Twin For Structural Systems</h3>
                 <img src="images/IoT-enabled-Digital-Twin-For-Structural-Systems.jpg" alt="IoT-enabled Digital Twin Architecture for Excavator Systems" class="project-image">
                 <div class="project-content">
-                    <h3>IoT-enabled Digital Twin For Structural Systems</h3>
                     <div class="project-details">
                         <div class="detail-section">
                             <h4>Objective</h4>
@@ -282,11 +274,11 @@
             <h2>Patents</h2>
             <div class="patent-grid">
                 <div class="patent-card">
-                    <h3><a href="https://ppubs.uspto.gov/dirsearch-public/print/downloadPdf/20220056666" target="_blank">Combination Tie Down Lug And Step Riser</a></h3>
-                    <p>A combination tie down lug and step riser includes a foot support portion, a hold down loop and a mounting portion. The combination tie down lug and step riser is preferably fabricated from a single piece of material. The foot support portion includes a plurality of projections extending upward from a top edge thereof. The hold down loop extends from one end of the footrest portion. The hold down loop includes a U-shaped opening with the U-shaped opening positioned along a horizontal axis. The mounting portion extends from an opposing end of the foot support portion. Opposing ends of the hold down loop and the mounting portion are attached to an excavator base with welding or any other suitable attachment method.</p>
+                    <h3>Combination Tie Down Lug And Step Riser[US11603643B2]</h3>
+                    <p>A combination tie-down lug and step riser includes a foot support portion, a hold-down loop, and a mounting portion. The combination tie down lug and step riser is preferably fabricated from a single piece of material. The foot support portion includes a plurality of projections extending upward from a top edge thereof. The hold down loop extends from one end of the footrest portion. The hold down loop includes a U-shaped opening with the U-shaped opening positioned along a horizontal axis. The mounting portion extends from an opposing end of the foot support portion. Opposing ends of the hold down loop and the mounting portion are attached to an excavator base with welding or any other suitable attachment method.</p>
                 </div>
                 <div class="patent-card">
-                    <h3><a href="https://ppubs.uspto.gov/dirsearch-public/print/downloadPdf/11886218" target="_blank">One-handed Joystick for Cranes</a></h3>
+                    <h3>One-handed Joystick for Cranes[US11886218B2]</h3>
                     <p>A one-handed joystick for cranes allows an operator to make all necessary motions with a single hand and arm for manipulating various components of a crane. The one-handed joystick includes a rotatable cylinder bar, a rotatable ring, an industrial joystick base, a rocker switch and at least two push button switches. Motions of the rotatable cylinder bar, the rotatable ring, the industrial base and the rocker switch are used to raise and lower the auxiliary hoist; raise and lower the telescopic boom for luffing a hoist; raise and lower the main hoist; slew the boom base in a clockwise or counterclockwise direction; and extend or retract the telescoping boom. The speed of main and auxiliary hosts may be changed with the two push button switches. A Deadman's switch may be installed on a back side of the rotatable cylinder bar.</p>
                 </div>
             </div>
@@ -313,7 +305,7 @@
                     <h3>Proven Results</h3>
                     <ul>
                         <li>15+ yrs structural design & FEA expertise (excavators, heavy systems)</li>
-                        <li>Delivered 15% weight savings, $1.2M annual savings via topology optimization</li>
+                        <li>Delivered 15% weight savings, annual cost savings via topology optimization</li>
                         <li>Pioneered digital twin with IoT sensors (92% prediction accuracy, –30% downtime)</li>
                         <li>Cut prototyping lead time 6 weeks → 2 weeks using additive manufacturing</li>
                         <li>Drove operator safety improvements (15% higher satisfaction, 10% lower fatigue)</li>
@@ -333,19 +325,21 @@
                     <blockquote>
                         "Raj quickly supported our team in developing new Earth Moving products. His communication skills and ability to see the bigger picture made him a strong leader. I highly recommend him in roles of technical and personnel leadership."
                     </blockquote>
-                    <cite><strong>Erik Goslawski</strong><br>Director, Siemens Digital Industries Software</cite>
+                    <cite><strong>- Erik Goslawski</strong><br>Director, Siemens Digital Industries Software</cite>
                 </div>
+                
                 <div class="testimonial-card">
                     <blockquote>
                         "Raj demonstrated impressive abilities and transitioned seamlessly from individual contributor to Engineering Manager. He motivated his team, removed roadblocks, and fostered continuous learning — a rare quality in engineering leadership."
                     </blockquote>
-                    <cite><strong>Guy A. Moore, PE</strong><br>Director of Engineering</cite>
+                    <cite><strong>- Guy A. Moore, PE</strong><br>Director of Engineering</cite>
                 </div>
+                
                 <div class="testimonial-card">
                     <blockquote>
                         "Raj led a 15-member structural team, driving urgent projects to successful launch. His leadership enabled innovation, including two patents. I confidently believe he will be a successful leader and innovator in the industry."
                     </blockquote>
-                    <cite><strong>Jack Wang</strong><br>Technology Researcher & Former President Zoomlion NA</cite>
+                    <cite><strong>- Jack Wang</strong><br>Technology Researcher & Former President Zoomlion NA</cite>
                 </div>
             </div>
         </div>
