--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header/Profile Section -->
     <header class="profile-header">
         <div class="profile-container">
-            <img src="images/Profile-Pic.jpg" alt="Hruturaj Vartak" class="profile-pic">
+            <img src="images/Profile Pic.jpg" alt="Hruturaj Vartak" class="profile-pic">
             <div class="profile-info">
                 <h1>Hruturaj Vartak</h1>
                 <h2>Lead Mechanical Engineer and Team Leader</h2>
@@ -40,7 +40,7 @@
             <!-- Project 1: Mini Excavator Frame -->
             <div class="project-card">
                 <h3>Mini Excavator Frame – Zero Tail-Swing Design</h3>
-                <img src="images/Mini-Excavator-Frame-Zero-Tail-Swing-Design.jpg" alt="Mini Excavator Frame Zero Tail-Swing Design FEA Analysis" class="project-image">
+                <img src="images/Mini Excavator Frame – Zero Tail-Swing Design.png" alt="Mini Excavator Frame Zero Tail-Swing Design FEA Analysis" class="project-image">
                 <div class="project-content">
                     <div class="project-details">
                         <div class="detail-section">
@@ -85,8 +85,8 @@
             <div class="project-card">
                 <h3>Reduced Tail-Swing Excavator Frame – Design Process</h3>
                 <div class="project-images-dual">
-                    <img src="images/Reduced-Tail-Swing-Excavator-Frame-Design-Process_1.jpg" alt="Reduced Tail-Swing Excavator Frame CAD Model" class="project-image-dual">
-                    <img src="images/Reduced-Tail-Swing-Excavator-Frame-Design-Process_2.jpg" alt="Reduced Tail-Swing Excavator Frame FEA Results" class="project-image-dual">
+                    <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_1.jpg" alt="Reduced Tail-Swing Excavator Frame CAD Model" class="project-image-dual">
+                    <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_2.jpg" alt="Reduced Tail-Swing Excavator Frame FEA Results" class="project-image-dual">
                 </div>
                 <div class="project-content">
                     <div class="project-details">
@@ -133,7 +133,7 @@
             <!-- Project 3: Excavator Arm Design -->
             <div class="project-card">
                 <h3>Excavator Arm Design & Structural Optimization</h3>
-                <img src="images/Excavator-Arm-Design-Structural-Optimization.jpg" alt="Excavator Arm Design & Structural Optimization" class="project-image">
+                <img src="images/Excavator Arm Design & Structural Optimization.jpg" alt="Excavator Arm Design & Structural Optimization" class="project-image">
                 <div class="project-content">
                     <div class="project-details">
                         <div class="detail-section">
@@ -168,8 +168,8 @@
             <div class="project-card">
                 <h3>Ergonomic And Visibility Study Of Excavator Cabin</h3>
                 <div class="project-images-dual">
-                    <img src="images/Ergonomic-And-Visibility-Study-Of-Excavator-Cabin_1.jpg" alt="Excavator Cabin FEA Stress Analysis" class="project-image-dual">
-                    <img src="images/Ergonomic-And-Visibility-Study-Of-Excavator-Cabin_2.jpg" alt="Excavator Cabin Visibility Analysis" class="project-image-dual">
+                    <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_1.jpg" alt="Excavator Cabin FEA Stress Analysis" class="project-image-dual">
+                    <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_2.jpg" alt="Excavator Cabin Visibility Analysis" class="project-image-dual">
                 </div>
                 <div class="project-content">
                     <div class="project-details">
