--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h3>Reduced Tail-Swing Excavator Frame – Design Process</h3>
                 <div class="project-images-dual">
                     <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_1.jpg" alt="Reduced Tail-Swing Excavator Frame CAD Model" class="project-image-dual">
-                    <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_2.jpg" alt="Reduced Tail-Swing Excavator Frame FEA Results" class="project-image-dual">
+                    <img src="images/Reduced Tail-Swing Excavator Frame – Design Process_2.png" alt="Reduced Tail-Swing Excavator Frame FEA Results" class="project-image-dual">
                 </div>
                 <div class="project-content">
                     <div class="project-details">
