--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <h3>Ergonomic And Visibility Study Of Excavator Cabin</h3>
                 <div class="project-images-dual">
                     <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_1.jpg" alt="Excavator Cabin FEA Stress Analysis" class="project-image-dual">
-                    <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_2.jpg" alt="Excavator Cabin Visibility Analysis" class="project-image-dual">
+                    <img src="images/Ergonomic And Visibility Study Of Excavator Cabin_2.png" alt="Excavator Cabin Visibility Analysis" class="project-image-dual">
                 </div>
                 <div class="project-content">
                     <div class="project-details">
