--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <!-- Project 6: IoT Digital Twin -->
             <div class="project-card">
                 <h3>IoT-enabled Digital Twin For Structural Systems</h3>
-                <img src="images/IoT-enabled-Digital-Twin-For-Structural-Systems.jpg" alt="IoT-enabled Digital Twin Architecture for Excavator Systems" class="project-image">
+                <img src="images/IoT-enabled Digital Twin For Structural Systems.png" alt="IoT-enabled Digital Twin Architecture for Excavator Systems" class="project-image">
                 <div class="project-content">
                     <div class="project-details">
                         <div class="detail-section">
